Fixed issue with redirects causing piece overlaps

--- a/src/mixins.scss
+++ b/src/mixins.scss
@@ -6,7 +6,6 @@
     display: flex;
     flex-direction: column;
     margin-top: 3px;
-    border: 0.5px solid rgba(34, 255, 34, 1);
     border-radius: 3.5px;
     background-color: rgba(21, 21, 21, 1);     
     z-index: 0;
